--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <section class="main">
             <p class="formBox">
-                <label for="digits">Number of Digits</label>
+                <label for="digits">Number of Digits&nbsp;</label>
                 <input id="digits" type="number" max="10" min="1" placeholder="6" />
             </p>
             <p class="formBox">
@@ -24,6 +24,9 @@
                 <button id="btnSend">Generate Numbers</button>
             </p>
         </section>
+        <footer>
+            Tony's Lottery - Bet with us!
+        </footer>
     </div>
     <div id="list" class="page">
         <header>
@@ -38,7 +41,7 @@
                 <ul class="num_list">
                     <!-- display the generated numbers from the server -->
                 </ul>
-                <p>
+                <p class="buttons">
                     <button id="btnBack">Start Again</button>
                 </p>
             </section>
