--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="home" class="page">
         <header>
-            <h1>Lotto Numbers</h1>
+            <h1><span>Lotto Numbers</span></h1>
         </header>
         <section class="main">
             <p class="formBox">
@@ -30,7 +30,7 @@
     </div>
     <div id="list" class="page">
         <header>
-            <h1>Lotto Numbers</h1>
+            <h1><span>Lotto Numbers</span></h1>
         </header>
         <div id="numbers" class="results">
             <section class="mainList1">
