--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>AJAX Lotto</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <title>AJAX Lotto</title>
 </head>
 
 <body>
@@ -55,4 +57,5 @@
     </div>
     <script src="js/main.js"></script>
 </body>
+
 </html>
